--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,3 +20,8 @@ jobs:
     - name: Run main
       run: |
         python src/main.py
+      env:
+        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+        REDDIT_PASS: ${{ REDDIT_PASS }}
+        REDDIT_USERNAME: ${{ REDDIT_USERNAME }}
