--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -23,5 +23,5 @@ jobs:
       env:
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
         REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-        REDDIT_PASS: ${{ REDDIT_PASS }}
-        REDDIT_USERNAME: ${{ REDDIT_USERNAME }}
+        REDDIT_PASS: ${{ secrets.REDDIT_PASS }}
+        REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
